# batch-ocr

./: .gitignore  PLAN.md  project.yml
BatchOCR/: BatchOCR.entitlements  BatchOCRApp.swift  ContentView.swift  Info.plist  OCRService.swift  PDFOCRPipeline.swift  PDFRenderer.swift  PDFViewerView.swift  QueueModel.swift  SearchablePDFWriter.swift
BatchOCR.xcodeproj/: project.pbxproj
BatchOCRTests/: ImageProcessorParityTests.swift  LMOnlyParityTests.swift  MinerUInferenceTests.swift  Stage2ExtractionTest.swift  VisionParityTests.swift
oracle/: dump_oracle.py  pyproject.toml
