[project]
name = "mineru-oracle"
version = "0.0.1"
description = "Python ground-truth harness for the Swift MinerU port"
requires-python = ">=3.11"
dependencies = [
    "mlx-vlm>=0.3.3",
    "mineru-vl-utils>=0.1.0",
    "huggingface-hub>=0.27",
    "pillow>=10",
    "numpy>=1.26",
    "safetensors>=0.4",
    "torch>=2.4",
    "torchvision>=0.19",
]

[tool.uv]
package = false
